♻️ Add sample for redirect flow
Changes:
1. Rename existing client to popup-client
2. Create landing page for integrator to pick redirect or popup method
3. Create sample of redirect method

Test plan:
- Expect popup method functionality to be unchanged. Regression tested completing a payment.
- Expect redirect method to work successfully completing a payment.
- Expect redirect method to work with failure state.

--- a/popup-client/checkout.html
+++ b/popup-client/checkout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centrapay Sample Checkout</title>
+    <title>Centrapay Popup Sample</title>
   </head>
   <body>
     <!-- The Centrapay button will go inside this container -->
@@ -12,7 +12,7 @@
     <p id="result-message"></p>
     <!-- Replace YOUR_MERCHANT_ID value with your merchantId -->
     <script src="https://sdk.centrapay.com/ecommerce/centrapay.js?merchantId=YOUR_MERCHANT_ID"></script>
-    <script src="app.js"></script>
+    <script src="popup-client/app.js"></script>
   </body>
 </html>
 
